--- a/_items/2019-10-10-0007.md
+++ b/_items/2019-10-10-0007.md
@@ -9,7 +9,7 @@ itemsubjecturl:
 itemsubject: Familial Cookbook Containing Recipes
 itemdate: ca. 1999
 itemtype: Cookbook
-shortdesc: A Cookbook of various recipes from the Puerto Rican Hawaiin community.
+shortdesc: A Cookbook of various recipes from the Puerto Rican Hawaiian community.
 categories: [ Individual Expression, Family Ties, Community Culture] 
 tags: [ Cooking, Recipes, Family History, Food, Island cooking Cooking, Puerto Rico Cooking, Hawaiian, Institute of Pacific Relations, Puerto Rican Immigration, Consumer Culture]
 ---
@@ -33,6 +33,8 @@ This primary source I found relates quite interestingly close to my object. This
  ## How The Secondary Source Ties To Your Object 1
 
 The secondary source I found ties to my object because it is a scholarly article that studies the in depth view of caribbean cooking and the various ways these small island countries create incredible food. The in depth literature gives insight to the cultural background that these communities such as the Puerto Ricans live in. Being able to connect these to the Hawaiian Puerto Ricans illustrates where these values and cultural ways of life got started and how they were brought to the Island state of Hawaii from other countries in the Caribbean.
+
+Puerto Rican immigration to the Hawaiian islands was, in part, a response to labor shortages that followed several decades of discrimination against and exclusion of East Asian immigrants. The first of these bans in 1882 excluded Chinese immigrants; although Hawaii was still a sovereign nation at the time, these bans influenced immigration to Hawaii, and in particular, treatment of Chinese immigrants who had been citizens in an 1887 constitution that denaturalized Chinese and Japanese citizens of Hawaii and weakened the Hawaiian monarchy. (https://centropr.hunter.cuny.edu/centrovoices/chronicles/how-first-puerto-ricans-arrived-hawai%E2%80%99i-island)
 
 Citation: Related Secondary Source Citation:
 Higman, B. W. "COOKBOOKS AND CARIBBEAN CULTURAL IDENTITY: AN ENGLISH-LANGUAGE HORS D'OEUVRE." NWIG: New West Indian Guide / Nieuwe West-Indische Gids 72, no. 1/2 (1998): 77-95. http://www.jstor.org/stable/41849892.
