--- a/_items/2019-10-01-0003.md
+++ b/_items/2019-10-01-0003.md
@@ -2,6 +2,7 @@
 layout: item
 title: Grateful Dead Hat
 author: Andy Floyd
+studentcontributor: Andy Floyd
 itemid: 2019-10-01-0003
 itemcontributor: Drew Heiderscheidt
 itemcreator: Grateful Dead Productions
@@ -9,28 +10,31 @@ itemsubjecturl:
 itemsubject: Hat
 itemdate: ca. 2018
 itemtype: Physical Object
-shortdesc: A turquoise strap-back hat with a Grateful Dead dancing bear on the front 
+shortdesc: A turquoise strap-back hat with a 1-inch purple embroidered Grateful Dead dancing bear on the front.
 categories: [ Nostalgia, Community Culture ]
 tags: [ Deadheads, Jam Bands, Hats, Rock Concerts ]
 ---
 
-## About This Item
+## About This Object
 
-The secondary source “Romanticizing Rock Music” makes a connection to this object through the ties that the Grateful Dead created to a niche of rock. Also, makes a connection to the art they created outside of the more common side of rock and roll that ended up going mainstream. To many people the Grateful Dead established a free-flowing art form by their “jam-band” sound. The rock and roll music they created was backed by a special community called “Dead Heads” that viewed their creations as art to be shared amongst each other. 
+A turquoise strap-back hat with a 1-inch purple embroidered Grateful Dead dancing bear on the front.
 
-In ties between the secondary source, the hat, and primary source, I found a connection in relation to the significance of Rock and Roll to the *culture* of our society. Rock and Roll grew tremendously throughout the 20th century and still stands today as a means of personal connection and a loved art by many people around the world. The hat is an example of the appreciation of the explosion of art described in the primary source and it’s appreciation throughout the decades it has been around.
+<p class=blockquote style=’font-size:115%;’>I'm a "Deadhead" as some people call it. Last year, this past year, I went to two shows. Next year I'm planning to go to five or six. It does connect me to people within Bloomington, who are also like Deadheads and have the same type of gear.</p>
 
-Through the secondary source of “The Music Never Stopped”, multiple connections are made to the object on the basis of community culture created by music, and the sentiment it provides individuals. The hat is a representation of not only music, but also a distinct community based around the impact that the music of the Grateful Dead had on listeners. This secondary source expands upon that same idea of community by exploring the “naming of businesses as a method for remembering the Grateful Dead.” Although the Grateful Dead originally created a sound and following distinct to San Francisco, individuals all throughout the entire country became deeply connected to the musical and cultural aspects of the band. So much so, that they named their businesses after the band. These businesses act a reminder of what the Grateful Dead meant to the owners and constantly provide an influence in remembering the sentiment of the cultural landscape that came out of California. Furthermore, it proves the strong community culture across the country that began in the late 1960’s and still continues to this day. Similar to these businesses, Drew’s hat acts as another physical example of the cultural landscape which continues on today and the sentiment that Deadheads share toward the Grateful Dead.
+## Deadheads and the Jam Band Sound
+### A History Harvest Perspective
+{% if page.studentcontributor %}
 
-In analyzing the second primary source, an interview with Ken Kesey on NPR, there’s a connection made to the community culture discussed in “The Music Never Stopped” and the hat. As Ken Kesey was a major figure in counterculture and mentor of the Grateful Dead, he established the basis of the culture that the Grateful Dead displayed by their music. From his influence upon the Grateful Dead, he influenced the idea of counterculture, which stemmed into the creation of a community that was brought together by shared support in this ideology being spread by the Grateful Dead. Just “The Music Never Stopped” discussed how businesses being named after the band provided an example of the massive community culture landscape of Deadheads, Drew’s hat also is a smaller example of these connections of physical representation of the counterculture ideology. Just within the physical appearance of the hat it is evident how counterculture is connected to the way the hat was made. The very vibrant turquoise color of the hat is an example of counterculture against more common colors and the dancing bear acts a symbol of free expression of self through dancing.
+*Exhibit text by {{ page.studentcontributor }}{% endif %}*
 
-![Google Map](/H301HistoryHarvest/assets/images/Maps.png)!
+For fans and music critics alike, the Grateful Dead are emblematic of the "jam band" sound, a free-flowing musical art form that calls back to the practice of jazz musicians from the early 20th century in their movement between scripted and unscripted performance. As the first of the jam bands, the Grateful Dead took these practices into large arenas as part of the growth of rock and roll after it went mainstream in the mid 1950s, and their fans followed.[^1]
 
-## From the Contributor
+The hat is a representation of not only music, but also a distinct community based around the impact that the music of the Grateful Dead had on listeners.[^2] Although the Grateful Dead originally created a sound and following distinct to San Francisco, individuals across the country became deeply connected to the musical and cultural aspects of the band, so much so, that they named their businesses after the band. These businesses act a reminder of what the Grateful Dead meant to the owners and constantly provide an influence in remembering the sentiment of the cultural landscape that came out of California. Furthermore, it proves the strong community culture across the country that began in the late 1960’s and is still evidenced in the presence of Grateful Dead fans wearing hats like this. acts as another physical example of the cultural landscape which continues on today and the sentiment that Deadheads share toward the Grateful Dead.
 
-This hat is symbolic of his fandom of the Grateful Dead. It also provides a connection between himself and other people within Bloomington that share the same fandom and sport the same type of gear around campus.
+One way we might understand this hat is in its integration of mainstream culture and counter culture. Ken Kesey was a major figure in counterculture and mentor of the Grateful Dead, he established the basis of the culture that the Grateful Dead displayed by their music. From his influence upon the Grateful Dead, he influenced the idea of counterculture, which stemmed into the creation of a community that was brought together by shared support in this ideology being spread by the Grateful Dead. Just “The Music Never Stopped” discussed how businesses being named after the band provided an example of the massive community culture landscape of Deadheads, Drew’s hat also is a smaller example of these connections of physical representation of the counterculture ideology. Just within the physical appearance of the hat it is evident how counterculture is connected to the way the hat was made. The very vibrant turquoise color of the hat is an example of counterculture against more common colors and the dancing bear acts a symbol of free expression of self through dancing.
+
  
 [Primary Source 1](http://webapp1.dlib.indiana.edu/findingaids/view?brand=general&docId=InU-Ar-VAA8140.xml&chunk.id=d1e93&text1=Rock%20and%20Roll&startDoc=1)
 [Primary Source 2](https://www.npr.org/templates/transcript/transcript.php?storyId=139259106)
-[Secondary Source 1](www.jstor.org/stable/3333411)
-[Secondary Source 2](https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead)
+[^1]:(www.jstor.org/stable/3333411)
+[^2]:(https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead)
