Guacardo and Dead hat edits

--- a/_items/2019-10-01-0003.md
+++ b/_items/2019-10-01-0003.md
@@ -29,12 +29,8 @@ A turquoise strap-back hat with a 1-inch purple embroidered Grateful Dead dancin
 
 For fans and music critics alike, the Grateful Dead are emblematic of the "jam band" sound, a free-flowing musical art form that calls back to the practice of jazz musicians from the early 20th century in their movement between scripted and unscripted performance. As the first of the jam bands, the Grateful Dead took these practices into large arenas as part of the growth of rock and roll after it went mainstream in the mid 1950s, and their fans followed.[^1]
 
-The hat is a representation of not only music, but also a distinct community based around the impact that the music of the Grateful Dead had on listeners.[^2] Although the Grateful Dead originally created a sound and following distinct to San Francisco, individuals across the country became deeply connected to the musical and cultural aspects of the band, so much so, that they named their businesses after the band. These businesses act a reminder of what the Grateful Dead meant to the owners and constantly provide an influence in remembering the sentiment of the cultural landscape that came out of California. Furthermore, it proves the strong community culture across the country that began in the late 1960’s and is still evidenced in the presence of Grateful Dead fans wearing hats like this. acts as another physical example of the cultural landscape which continues on today and the sentiment that Deadheads share toward the Grateful Dead.
+The hat is a representation of not only music, but also a distinct community based around the impact that the music of the Grateful Dead had on listeners.[^2] Although the Grateful Dead originally created a sound and following distinct to San Francisco, individuals across the country became deeply connected to the musical and cultural aspects of the band, so much so, that they began to name their businesses after the band. These businesses act a reminder of what the Grateful Dead meant to the owners, demonstrate the widespread adoption of a specific cultural landscape that came out of California, and help us see an integration of mainstream culture and counter culture.[^3] The very vibrant turquoise color of the hat is an example of counterculture's rejection of the staid neutrals of the business world and the dancing bear acts a symbol of free expression of self through dancing. At the same time, the hat's mass production also provides a frame for seeing the absorption of counter-culture and its fandom into a more mainstrea
 
-One way we might understand this hat is in its integration of mainstream culture and counter culture. Ken Kesey was a major figure in counterculture and mentor of the Grateful Dead, he established the basis of the culture that the Grateful Dead displayed by their music. From his influence upon the Grateful Dead, he influenced the idea of counterculture, which stemmed into the creation of a community that was brought together by shared support in this ideology being spread by the Grateful Dead. Just “The Music Never Stopped” discussed how businesses being named after the band provided an example of the massive community culture landscape of Deadheads, Drew’s hat also is a smaller example of these connections of physical representation of the counterculture ideology. Just within the physical appearance of the hat it is evident how counterculture is connected to the way the hat was made. The very vibrant turquoise color of the hat is an example of counterculture against more common colors and the dancing bear acts a symbol of free expression of self through dancing.
-
- 
-[Primary Source 1](http://webapp1.dlib.indiana.edu/findingaids/view?brand=general&docId=InU-Ar-VAA8140.xml&chunk.id=d1e93&text1=Rock%20and%20Roll&startDoc=1)
-[Primary Source 2](https://www.npr.org/templates/transcript/transcript.php?storyId=139259106)
-[^1]:(www.jstor.org/stable/3333411)
-[^2]:(https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead)
+[^1]: Gracyk, Theodore A. “Romanticizing Rock Music.” Journal of Aesthetic Education, vol. 27, no. 2, 1993, pp. 43–58. JSTOR, www.jstor.org/stable/3333411. Accessed 28 Feb. 2020.
+[^2]: https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead
+[^3]: https://www.npr.org/templates/transcript/transcript.php?storyId=139259106
