--- a/_items/2019-10-01-0006.md
+++ b/_items/2019-10-01-0006.md
@@ -19,7 +19,7 @@ tags: [stuffed animal, culture]
 
 Guacardo is a tiny stuffed avocado with a spirit of its own - it has legs, arms, and even a silly face. The contributor got this little guy from a website for Latinx youth in the United States called “wearemitu.” This object is among a collection of other items the contributor has from this site. It represents how she has been able to stay connected with her heritage and the Latinx community despite being in an environment where the Latinx population is low.
 
-<p class=blockquote style='font-size:115%;'>This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort.</p>
+<p class=blockquote style='font-size:115%;'>Guacardo sort of started off like as a joke. I thought he was cute, I like avocados and my obsession with avocados has sort of grown, but now it’s definitely become a part of my identity. My friends will  show me things with avocados or tag me in things or my sisters will buy me some of the objects. I’ve embraced more of  who I am and my background, being here at IU, just because there aren’t as many of us here. We’re about 7% of the student population at IU and about 7% in the whole state. I’m originally from Florida so there growing up, I was surrounded by a lot of other Latinx individuals. Being here, because it’s not as prevalent, I’ve connected more to. A lot of my closest friends I met because there were networking opportunities for Latinx graduate students to come together.</p>
 
 ## Preserving One’s Cultural Identity
 ### A History Harvest Perspective
@@ -27,10 +27,10 @@ Guacardo is a tiny stuffed avocado with a spirit of its own - it has legs, arms,
 
 *Exhibit text by {{ page.studentcontributor }}{% endif %}*
 
-Transitioning to college is difficult, but it is especially difficult for people who are of the minority population and lack representation in the community they are in. Could you imagine what it is like to move to a community where your culture is so underrepresented? In interviews with Latinx students show us the various experiences of adjusting to college life at Indiana University. A common theme across these interviews is how they kept their Latinx identities while still being a Hoosier.[^1] 
+Moving from place to place for work or school is especially difficult for people whose voices aren't as visible in their new communities. Vanessa's Guacardo has become an expression of her Latinx identity and has helped her adjust to life at Indiana University. We see these same themes reflected in the experiences of 11 Latino immigrants from Mexico who settled in Indianapolis, and whose interviews are housed in the IU Center for Documentary Research and Practice. A common theme across the interviews is the variety of ways they found to maintain their Latinx identities and connections to their original communities in parallel with their new identities as Hoosiers.[^1]
 
-Another solution to preserving your cultural identity is by using digital media outlets, such as twitter, facebook, and other websites. The internet allows for intercultural communication to be easy. With this new type of media, you can keep in touch with your family and friends, express opinions, and stay connected with your culture. Technology has a strong impact on one’s identity, and when used to continue to learn about and be a part of one’s culture, one’s cultural identity is actually strengthened.[^2] Guacardo’s contributor figured this out when she came to Indiana University, where the Latinx population is only 4% of the student population, by engaging with the “wearemitu” community.[^3]
+As digital media outlets, such as Twitter, Facebook, and Instagram, have proliferated, immigrants have found ways to keep in touch with their family and friends, express opinions, and strengthen their connections with their cultures of origin and their new homes.[^2] The “wearemitu” community provides a similar connection through a combination of social media and material culture.[^3]
 
-[^1]:  -
+[^1]: http://purl.dlib.indiana.edu/iudl/findingaids/cshm/ohrc104
 [^2]: Blattner, Géraldine, and Melissa Fiori. "Virtual Social Network Communities: An Investigation of Language Learners’ Development of Sociopragmatic Awareness and Multiliteracy Skills." CALICO Journal 29, no. 1 (2011): 24-43.
 [^3]: Mesa, Cristal. “We Are Mitú.” we are mitú. wearemitu, February 14, 2020. https://wearemitu.com/.
