--- a/_items/2019-10-01-0003.md
+++ b/_items/2019-10-01-0003.md
@@ -29,7 +29,7 @@ A turquoise strap-back hat with a 1-inch purple embroidered Grateful Dead dancin
 
 For fans and music critics alike, the Grateful Dead are emblematic of the "jam band" sound, a free-flowing musical art form that calls back to the practice of jazz musicians from the early 20th century in their movement between scripted and unscripted performance. As the first of the jam bands, the Grateful Dead took these practices into large arenas as part of the growth of rock and roll after it went mainstream in the mid 1950s, and their fans followed.[^1]
 
-The hat is a representation of not only music, but also a distinct community based around the impact that the music of the Grateful Dead had on listeners.[^2] Although the Grateful Dead originally created a sound and following distinct to San Francisco, individuals across the country became deeply connected to the musical and cultural aspects of the band, so much so, that they began to name their businesses after the band. These businesses act a reminder of what the Grateful Dead meant to the owners, demonstrate the widespread adoption of a specific cultural landscape that came out of California, and help us see an integration of mainstream culture and counter culture.[^3] The very vibrant turquoise color of the hat is an example of counterculture's rejection of the staid neutrals of the business world and the dancing bear acts a symbol of free expression of self through dancing. At the same time, the hat's mass production also provides a frame for seeing the absorption of counter-culture and its fandom into a more mainstrea
+The hat is a representation of not only music, but also a distinct community based around the impact that the music of the Grateful Dead had on listeners.[^2] Although the Grateful Dead originally created a sound and following distinct to San Francisco, individuals across the country became deeply connected to the musical and cultural aspects of the band, so much so, that they began to name their businesses after the band. These businesses act a reminder of what the Grateful Dead meant to the owners, demonstrate the widespread adoption of a specific cultural landscape that came out of California, and help us see an integration of mainstream culture and counter culture.[^3] The very vibrant turquoise color of the hat is an example of counterculture's rejection of the staid neutrals of the business world and the dancing bear acts a symbol of free expression of self through dancing. At the same time, the hat's mass production also provides a frame for seeing the absorption of counter-culture and its fandom into a more mainstream aesthetic.
 
 [^1]: Gracyk, Theodore A. “Romanticizing Rock Music.” Journal of Aesthetic Education, vol. 27, no. 2, 1993, pp. 43–58. JSTOR, www.jstor.org/stable/3333411. Accessed 28 Feb. 2020.
 [^2]: https://www.researchgate.net/publication/312047097_The_music_never_stopped_naming_businesses_as_a_method_for_remembering_the_Grateful_Dead
