--- a/_items/2019-10-01-0006.md
+++ b/_items/2019-10-01-0006.md
@@ -1,7 +1,7 @@
 ---
 layout: item
 title: Guacardo
-author: Ashley Hennessey
+author: Marcelino McCrary-Ball
 studentcontributor: Ashley Hennessey
 itemid: 2019-10-01-0015
 itemcontributor: Vanessa Elias
@@ -25,7 +25,7 @@ Guacardo is a tiny stuffed avocado with a spirit of its own - it has legs, arms,
 ### A History Harvest Perspective
 {% if page.studentcontributor %}
 
-*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+*Exhibit text by {{ page.studentcontributor }}{% endif %}{% if page.author %}and {{ page.author }}{% endif %}*
 
 Moving from place to place for work or school is especially difficult for people whose voices aren't as visible in their new communities. Vanessa's Guacardo has become an expression of her Latinx identity and has helped her adjust to life at Indiana University. We see these same themes reflected in the experiences of 11 Latino immigrants from Mexico who settled in Indianapolis, and whose interviews are housed in the IU Center for Documentary Research and Practice. A common theme across the interviews is the variety of ways they found to maintain their Latinx identities and connections to their original communities in parallel with their new identities as Hoosiers.[^1]
 
