--- a/_items/2019-10-01-0006.md
+++ b/_items/2019-10-01-0006.md
@@ -3,7 +3,7 @@ layout: item
 title: Guacardo
 author: Marcelino McCrary-Ball
 studentcontributor: Ashley Hennessey
-itemid: 2019-10-01-0015
+itemid: 2019-10-01-0006
 itemcontributor: Vanessa Elias
 itemcreator: Vanessa Elias
 itemsubjecturl: 
@@ -19,7 +19,7 @@ tags: [stuffed animal, culture]
 
 Guacardo is a tiny stuffed avocado with a spirit of its own - it has legs, arms, and even a silly face. The contributor got this little guy from a website for Latinx youth in the United States called “wearemitu.” This object is among a collection of other items the contributor has from this site. It represents how she has been able to stay connected with her heritage and the Latinx community despite being in an environment where the Latinx population is low.
 
-<p class=blockquote style='font-size:115%;'>Guacardo sort of started off like as a joke. I thought he was cute, I like avocados and my obsession with avocados has sort of grown, but now it’s definitely become a part of my identity. My friends will  show me things with avocados or tag me in things or my sisters will buy me some of the objects. I’ve embraced more of  who I am and my background, being here at IU, just because there aren’t as many of us here. We’re about 7% of the student population at IU and about 7% in the whole state. I’m originally from Florida so there growing up, I was surrounded by a lot of other Latinx individuals. Being here, because it’s not as prevalent, I’ve connected more to. A lot of my closest friends I met because there were networking opportunities for Latinx graduate students to come together.</p>
+<p class="blockquote">Guacardo sort of started off like as a joke. I thought he was cute, I like avocados and my obsession with avocados has sort of grown, but now it’s definitely become a part of my identity. My friends will  show me things with avocados or tag me in things or my sisters will buy me some of the objects. I’ve embraced more of  who I am and my background, being here at IU, just because there aren’t as many of us here. We’re about 7% of the student population at IU and about 7% in the whole state. I’m originally from Florida so there growing up, I was surrounded by a lot of other Latinx individuals. Being here, because it’s not as prevalent, I’ve connected more to. A lot of my closest friends I met because there were networking opportunities for Latinx graduate students to come together.{% if page.itemcontributor %}<br><strong>—{{ page.itemcontributor }}</strong>{% endif %}</p>
 
 ## Preserving One’s Cultural Identity
 ### A History Harvest Perspective
@@ -30,6 +30,8 @@ Guacardo is a tiny stuffed avocado with a spirit of its own - it has legs, arms,
 Moving from place to place for work or school is especially difficult for people whose voices aren't as visible in their new communities. Vanessa's Guacardo has become an expression of her Latinx identity and has helped her adjust to life at Indiana University. We see these same themes reflected in the experiences of 11 Latino immigrants from Mexico who settled in Indianapolis, and whose interviews are housed in the IU Center for Documentary Research and Practice. A common theme across the interviews is the variety of ways they found to maintain their Latinx identities and connections to their original communities in parallel with their new identities as Hoosiers.[^1]
 
 As digital media outlets, such as Twitter, Facebook, and Instagram, have proliferated, immigrants have found ways to keep in touch with their family and friends, express opinions, and strengthen their connections with their cultures of origin and their new homes.[^2] The “wearemitu” community provides a similar connection through a combination of social media and material culture.[^3]
+
+#### Notes
 
 [^1]: http://purl.dlib.indiana.edu/iudl/findingaids/cshm/ohrc104
 [^2]: Blattner, Géraldine, and Melissa Fiori. "Virtual Social Network Communities: An Investigation of Language Learners’ Development of Sociopragmatic Awareness and Multiliteracy Skills." CALICO Journal 29, no. 1 (2011): 24-43.
