--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -19,7 +19,7 @@ tags: [ clay, mud, art in education, Touch--Psychological Aspects, Play,  learni
 
 The Dorodango collection is a collection of mudballs that were collected by the object’s owner over the course of the past 25 years. He teaches the process of creating dorodango as an educational tool in his art classes to help his students learn how nature can be used to create art, to teach them patience, and as a means of relief and comfort. 
 
-<p class=blockquote style='font-size:115%;'>This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort.</p>
+<p class="blockquote">This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort. {% if page.itemcontributor %}<br><strong>—{{ page.itemcontributor }}</strong>{% endif %}</p>
 
 ## Play as Educational Development
 ### A History Harvest Perspective
@@ -36,6 +36,8 @@ But the dorodango isn't just an art form. It's also about the role of play in hu
 The making of dorodango was revived in the late 1990s by Professor Fumiu Kayo, a Japanese professor studying the intersection of experimentation and play in childhood development.[^1] Kayo's research suggests that it is important for children to learn about nature through experiencing nature. The combination of play and experimentation involved in making dorodango helps very young children acquire a respect for nature and learn mental balance, lessons that last well into adulthood.[^2]
 
 The dorodango contribution brings ideas of play from Professor Butler's mid-century work together with early childhood education in Japan in Bloomington classrooms and shows us just how embedded in a global context we are at IUB.
+
+#### Notes
 
 [^1]: Sheng, Yi. “A Post-Communist Picnic.” May 15, 2010. https://doi.org/https://doi.org/10.25772/C12G-DK49.
 [^2]: Blattner, Géraldine, and Melissa Fiori. "Virtual Social Network Communities: An Investigation of Language Learners’ Development of Sociopragmatic Awareness and Multiliteracy Skills." CALICO Journal 29, no. 1 (2011): 24-43.
