--- a/_items/2019-10-01-0008.md
+++ b/_items/2019-10-01-0008.md
@@ -14,10 +14,8 @@ categories: [ Nostalgia]
 tags: [ material culture, ticket, travel, Berlin ]
 ---
 
-## About This Item
+## About This Object
 
-This is a ticket stub.
+A ticket stub from Berlin's subway, dated to summer of 2019.
 
-## From the Contributor
-
-I like to travel and this is a subway ticket from Berlin, from my first time traveling in Europe.	Therefore it has sentimental value as well as serves as a record. ![Network](/H301HistoryHarvest/assets/images/Networks.png)!
+<p class="blockquote">I like to travel and this is a subway ticket from Berlin, from my first time traveling in Europe.  I tend to keep all the little things that I collect when I travel. it was my first time traveling in Europe and I really liked Berlin so it has memories attached to it and that’s why it’s significant. {% if page.itemcontributor %}<br><strong>—{{ page.itemcontributor }}</strong>{% endif %}</p>
