--- a/_items/2019-10-03-0002.md
+++ b/_items/2019-10-03-0002.md
@@ -2,6 +2,7 @@
 layout: item
 title: Alebrije cat
 author: Matthew Landini
+studentcontributor: Matthew Landini
 itemid: 2019-10-03-0002
 itemcontributor: Erika Sosa Garcia
 itemcreator: N/A
@@ -14,21 +15,25 @@ categories: [ Community Culture, Individual Expression ]
 tags:
 ---
 
-## About This Item
-This alebrije is carved from wood in the shape of a cat, and painted in vivid colors. They are created in Oaxaca, Mexico to respresent what the creator dreams about. This one here was created by a local artist from Oaxaca which Erika purchased while there for a close friend. 
->*Alebrije are from Oaxaca and alebrije came from someone's dreams..., he dreamt about animals, about monsters with different colors, in history. So when he woke up the next day, he said that he was starting to draw these figures. Then later he decided to so some carving.*
+## About This Object
 
-If you are interested in the history of alebrije, this short documentary gives a breif background to them, a few interviews with those who create them, and the various stages of the process!
+This alebrije is carved from wood in the shape of a cat, and painted in vivid colors. They are created in Oaxaca, Mexico to respresent what the creator dreams about. This one was created by a local artist from Oaxaca, which Erika purchased while there for a close friend.
 
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=8QCXmh4zOOQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+>Alebrije are from Oaxaca and alebrije came from someone's dreams..., he dreamt about animals, about monsters with different colors, in history. So when he woke up the next day, he said that he was starting to draw these figures. Then later he decided to so some carving. I brought many things from Oaxaca because I want to share my culture with my students here, because I am teaching Spanish. I want to share things with my colleagues. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
-In late October in Mexico City, there is also a parade that is hosted centered around alebrije. Here, carvings of different animals, living and fictional, are shown and celebrated. The alebrije for this festival range from hand-held carvings to large sculptures needing carts during the parade like the ones that were the voted the most creative and true to the parade's theme [here](https://archivo.eluniversal.com.mx/notas/718629.html) this one here:
+## Dreams of a Oaxacan Craft
+### A History Harvest Perspective
+{% if page.studentcontributor %}
+
+*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+
+If you are interested in the history of alebrije, this short documentary provides a brief background, a few interviews with those who create them, and the various stages of the process!
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8QCXmh4zOOQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+In late October in Mexico City, there is also a parade that is hosted centered around alebrije. Here, carvings of different animals, living and fictional, are shown and celebrated. The alebrije for this festival range from hand-held carvings to large sculptures needing carts during the parade, like the one below which was [voted the most creative and true to the parade's theme](https://archivo.eluniversal.com.mx/notas/718629.html):
 
 <p align="center">
-  <img width="385" height="279.767" src="/IUBHistoryHarvest/assets/images/alebrije_parade_cart.jpg">
+  <img width="385" height="279.767" src="/assets/images/alebrije_parade_cart.jpg">
 </p>
 
-
-
-## From the Contributor
->*I brought many things from Oaxaca because I want to share my culture with my students here, because I am teaching Spanish. I want to share things with my colleagues.*
