--- a/_items/2019-10-01-0003.md
+++ b/_items/2019-10-01-0003.md
@@ -19,7 +19,7 @@ tags: [ Deadheads, Jam Bands, Hats, Rock Concerts ]
 
 A turquoise strap-back hat with a 1-inch purple embroidered Grateful Dead dancing bear on the front.
 
-<p class="blockquote">I'm a "Deadhead" as some people call it. Last year, this past year, I went to two shows. Next year I'm planning to go to five or six. It does connect me to people within Bloomington, who are also like Deadheads and have the same type of gear. {% if page.itemcontributor %}<br><strong>—{{ page.itemcontributor }}</strong>{% endif %}</p>
+>I'm a "Deadhead" as some people call it. Last year, this past year, I went to two shows. Next year I'm planning to go to five or six. It does connect me to people within Bloomington, who are also like Deadheads and have the same type of gear. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Deadheads and the Jam Band Sound
 ### A History Harvest Perspective
