--- a/_items/2019-10-01-0008.md
+++ b/_items/2019-10-01-0008.md
@@ -19,7 +19,7 @@ tags: [ material culture, ticket, travel, Berlin ]
 
 A ticket stub from Berlin's subway, dated to summer of 2019. This was Navdeep's first time traveling to Berlin, and Europe in general. When he travels, Navdeep enjoys collecting the "little things" as he travels. 
 
->I like to travel and this is a subway ticket from Berlin, from my first time traveling in Europe.  I tend to keep all the little things that I collect when I travel. it was my first time traveling in Europe and I really liked Berlin so it has memories attached to it and that’s why it’s significant. {% if page.itemcontributor %}**<br><strong>**—{{ page.itemcontributor }}{% endif %}
+>I like to travel and this is a subway ticket from Berlin, from my first time traveling in Europe.  I tend to keep all the little things that I collect when I travel. it was my first time traveling in Europe and I really liked Berlin so it has memories attached to it and that’s why it’s significant. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
 
 ## Tiny Reminders of Global Adventures
 ### A History Harvest Perspective
