--- a/_items/2019-10-03-0001.md
+++ b/_items/2019-10-03-0001.md
@@ -1,1 +1,20 @@
----layout: itemtitle: 21 Hatauthor: Kalani Craigitemid: 2019-10-03-0001imagecredit: itemcontributor: Ethan Shimanitemcreator: 21itemsubject: itemacquiredwhere: New Yorkitemindianacity: Bloomingtonitemdatemade: itemtype: Physical Objectshortdesc: This hat came from a restaurant with tons of mob history in New York City.categories: [ Nostalgia, Individual Expression, Community Culture ]tags: [ Hats, Nostalgia]---## About This ObjectThis hat came from a restaurant with tons of mob history in New York City.>So I got this hat in New York City] at a restaurant called the Twenty-One Club. It was a Prohibition era bar, and they got shut down and then had to move around New York City a bunch of times. Eventually they relocated, and now if you go there on your twenty-first birthday, they give you a hat. So it wasn’t my twenty-first birthday, but I did manage to get a hat from somebody. Now me and my sister both have them, and it’s a very sentimental thing. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
+---
+layout: item
+title: "21 Hat"
+itemid: 2019-10-03-0001
+itemcontributor: Ethan Shiman
+itemcreator: 21
+itemsubjecturl: 
+itemsubject: "21 hat"
+itemdate: N/A
+itemtype: Physical Object
+shortdesc: This hat came from a restaurant with tons of mob history in New York City.
+categories: [ Nostalgia, Individual Expression, Community Culture ]
+tags: [ Hats, Nostalgia ]
+---
+
+## About This Object
+
+The hat came from a bar in New York City called "21", which opened its doors in 1930 as a speakeasy in the Prohibition Era. The bar has a tradition of giving away hats to patrons who celebrate their 21st birthday on site.
+
+>So I got this hat in New York City] at a restaurant called the Twenty-One Club. It was a Prohibition era bar, and they got shut down and then had to move around New York City a bunch of times. Eventually they relocated, and now if you go there on your twenty-first birthday, they give you a hat. So it wasn’t my twenty-first birthday, but I did manage to get a hat from somebody. Now me and my sister both have them, and it’s a very sentimental thing. {% if page.itemcontributor %}**—{{ page.itemcontributor }}**{% endif %}
