--- a/_items/2019-10-03-0006.md
+++ b/_items/2019-10-03-0006.md
@@ -20,6 +20,7 @@ Reusable waterbottles and thermoses have become a growing trend and means of sel
 >*I'm almost never without this object.  It's black. It was once matte black, but it's now very beat up. You can see the silver. It's a silver thermos that was powder-coated or whatever matte black and is now dinged up, scraped up, has a sippy lid on top, has a couple of stickers on it. One sticker's so faded you can't see what it once was, another sticker is not so faded.  It says a fair bit about the places to which, with which I identify.*
 
 ## Reusable Culture in the Modern Day
+With options like steel, glass, and plastic, reusable waterbottles and thermoses, 
 
 [^1]: Mull, Amanda. “How Fancy Water Bottles Became a 21st-Century Status Symbol.” The Atlantic, Atlantic Media Company, 4 Nov. 2019, www.theatlantic.com/health/archive/2019/02/luxury-water-bottles/582595/.
 [^2]: Northrop, Andy, and Michigan State University. “Steel, Glass, and/or Plastic Bottles: What Is the Best Choice?” MSU Extension, 2 Oct. 2018, www.canr.msu.edu/news/steel_glass_and_or_plastic_bottles_what_is_the_best_choice.
