correct itemid field of 2019-10-08-0002.md

--- a/_items/2019-10-08-0002.md
+++ b/_items/2019-10-08-0002.md
@@ -2,7 +2,7 @@
 layout: item
 title: I am worthy
 author: 
-itemid: 2019-10-08-ID0002
+itemid: 2019-10-08-0002
 itemcontributor: 
 itemcreator: I am worthy social student group
 itemsubjecturl: http://id.loc.gov/authorities/subjects/sh85015782
